crates/busx/tests/snapshots/tui_pty__service_list_filtered_scroll.snap
---
source: crates/busx/tests/tui_pty.rs
assertion_line: 296
expression: screen
---

┌Services──────────────────────────────────────────────────────┐
│org.busx.ScrollA                        <PID>  <PROC>         │
│org.busx.ScrollB                        <PID>  <PROC>         │
│org.busx.ScrollC                        <PID>  <PROC>         │
│org.busx.ScrollD                        <PID>  <PROC>         │
│org.busx.ScrollE                        <PID>  <PROC>         │
│org.busx.ScrollF                        <PID>  <PROC>         │
│org.busx.ScrollG                        <PID>  <PROC>         │
└──────────────────────────────────────────────────────────────┘
/ scroll
↑↓ select · Enter open · / filter · r refresh · q quit · ? help
