crates/busx/tests/snapshots/tui_pty__service_list_scrolled_scrollj.snap
---
source: crates/busx/tests/tui_pty.rs
assertion_line: 209
expression: screen
---

┌Services──────────────────────────────────────────────────────┐
│org.busx.ScrollH                        <PID>  <PROC>         │
│org.busx.ScrollI                        <PID>  <PROC>         │
│org.busx.ScrollJ                        <PID>  <PROC>         │
│org.busx.ScrollK                        <PID>  <PROC>         │
└──────────────────────────────────────────────────────────────┘
↑↓ select · Enter open · / filter · r refresh · q quit · ? help
