crates/busx/tests/snapshots/tui_pty__service_list_scrolls_then_climbs.snap
---
source: crates/busx/tests/tui_pty.rs
expression: probe.screen_contents()
---
                                                                
┌Services──────────────────────────────────────────────────────┐
│org.busx.ScrollH                       <PID>  <PROC>│
│org.busx.ScrollI                       <PID>  <PROC>│
│org.busx.ScrollJ                       <PID>  <PROC>│
│org.busx.ScrollK                       <PID>  <PROC>│
└──────────────────────────────────────────────────────────────┘
↑↓ select · Enter open · / filter · r refresh · q quit · ? help
